[package]
name = "hashmap-entry-ownable"
description = "Variation of HashMap::entry() that accepts borrowed forms of keys"
version = "0.2.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/hashmap-entry-ownable"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
hashbrown = { version = "0.1", optional = true }

[features]
default = []
nightly = []
